Compiler/tests/errors/call_to_method_does_not_exist/MainTEST.jack
// This file is part of the materials accompanying the book 
// "The Elements of Computing Systems" by Nisan and Schocken, 
// MIT Press. Book site: www.idc.ac.il/tecs
// File name: projects/10/ArrayTest/Main.jack

/** Computes the average of a sequence of integers. */

    class Main {
    field Otro object;

    function void Main () {

      do object.try_it(1);
      do object.won_t_work();


    }

}